--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en-US">
   <head>
     <title>1 Editor</title>
+    <style>body {color:lawngreen;
+    background-color:rgb(18,18,18)}
+    button {color:white; background-color:darkred;
+    height:60px; width:200px; border:none;
+    border-radius:8px; cursor:pointer;}
+    button:hover {background-color:red;}</style>
   </head>
   <body dir="ltr">
     <main>
