--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     background-color:rgb(18,18,18)}
     button {color:white; background-color:darkred;
     height:60px; width:200px; border:none;
-    border-radius:8px; cursor:pointer;}
+    border-radius:8px; cursor:pointer; font-size:20px;}
     button:hover {background-color:red;}</style>
   </head>
   <body dir="ltr">
@@ -17,7 +17,7 @@
       <div class="content">
         This editor isn't quite done yet<br/>
         but you can test what we have so far<br/>
-        just click the 'test' button below enjoy!<br/>
+        just click the 'test' button below enjoy!<br/><br/>
         <a href="/1">
           <button>Test Editor</button>
         </a>
