--- a/1/index.html
+++ b/1/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="en-US">
+  <head>
+    <title>1 Editor</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <script src="files.js" type="text/javascript" async defer></script>
+    <script src="language.js" type="text/javascript" async defer></script>
+    <script src="drawing.js" type="text/javascript" async defer></script>
+    <script src="addScript.js" type="text/javascript" async defer></script>
+  </head>
+  <body dir="ltr">
+    <main>
+    </main>
+  </body>
+</html>
